--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,18 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    def archLifecycleVersion = '1.1.1'
+    implementation "android.arch.lifecycle:extensions:$archLifecycleVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$archLifecycleVersion"
+
+    // Glide
+    def glideVersion = '4.8.0'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
 
+    //circle imageview
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 
 }
